Updated associated files

--- a/UK_House_Prices_Challenge/Unit_4_Challenge_-_Tier_3.ipynb
+++ b/UK_House_Prices_Challenge/Unit_4_Challenge_-_Tier_3.ipynb
@@ -2357,7 +2357,6 @@
    "source": [
     "#Created a function to take for a Borough name given, the mean average price from a starting year and ending year and providing a price ratio\n",
     "def create_price_ratio(borough_name,starting_year=2003,end_year=2023):\n",
-    "    \"\"\"Function to create a price ratio from mean Average Price of starting year and mean Average Price for end year for a London Borough input\"\"\"\n",
     "    london_filtered = london[london['London_Borough'] == str(borough_name)]\n",
     "    london_start_year = london_filtered[london_filtered['Year'] == starting_year].iloc[:,3]\n",
     "    london_end_year = london_filtered[london_filtered['Year'] == end_year].iloc[:,3]\n",
@@ -2700,9 +2699,9 @@
    "source": [
     "# Conclusions\n",
     "\n",
-    "Looking at the data, Harrow, Croyden, Hillingdon, Hounslow, and Redbridge were the highest in terms of average price ratio. Therefore, these are the boroughs that expierenced the greatest price increase from 2003 to 2023.\n",
+    "Looking at the data, Harrow, Croyden, Hillingdon, Hounslow, and Redbridge were the highest in terms of average price ratio. Therefore, these are the boroughs that expierenced the greatest price increase from 2003 and 2023.\n",
     "\n",
-    "As a summary of the opposite, Hackeny, Waltham Forest, Kensington & Chelsea, Haringey, and Southwark expierenced the least change in price difference over the past 20 years taking just 2003 and 2023 as starting and ending year. \n",
+    "As a summary of the opposite, Hackeny, Waltham Forest, Kensington & Chelsea, Haringey, and Southwark expierenced the least change in price difference from 2003 and 2023. \n",
     "\n",
     "This concludes the study for the London Datastore Dataset."
    ]
