Checked text of comments

--- a/UK_House_Prices_Challenge/Unit_4_Challenge_-_Tier_3.ipynb
+++ b/UK_House_Prices_Challenge/Unit_4_Challenge_-_Tier_3.ipynb
@@ -135,7 +135,7 @@
     "# First, make a variable called url_LondonHousePrices, and assign it the following link, enclosed in quotation-marks as a string:\n",
     "# https://data.london.gov.uk/download/uk-house-price-index/70ac0766-8902-4eb5-aab5-01951aaed773/UK%20House%20price%20index.xls\n",
     "\n",
-    "#url not easy to be able to map to to load dataset\n",
+    "#url not easy to be able to map to load dataset\n",
     "url_LondonHousePrices = \"https://data.london.gov.uk/download/uk-house-price-index/70ac0766-8902-4eb5-aab5-01951aaed773/UK%20House%20price%20index.xlsx\"\n",
     "\n",
     "#Performed workaroud to dowload dataset and load excel file from file folder instead\n",
