Added text to comments

--- a/UK_House_Prices_Challenge/Unit_4_Challenge_-_Tier_3.ipynb
+++ b/UK_House_Prices_Challenge/Unit_4_Challenge_-_Tier_3.ipynb
@@ -2487,6 +2487,7 @@
    "source": [
     "#From the above list, intiated a for loop to calculate price ratios for each London Borough provided and appends to a ratio list\n",
     "#The list of ratios is then added as a new column in the above boroughs dataframe to create a new dataframe of each London Borough with its associated price ratio\n",
+    "#dropna() method performed in order to remove any still associated NA values from the dataframe\n",
     "ratio_list = []\n",
     "for i in boroughs:\n",
     "    ratio = create_price_ratio(i)\n",
