Added ENV file to Jupyter notebook

--- a/API_Mini_Project/api_data_wrangling_mini_project.ipynb
+++ b/API_Mini_Project/api_data_wrangling_mini_project.ipynb
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "VKfkG3Sy56qMP3buWZFD\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "load_dotenv()\n",
+    "load_dotenv('env_example.env')\n",
     "API_KEY = os.getenv('NASDAQ_API_KEY')\n",
     "\n",
     "print(API_KEY)"
