Completed exploration of walkthrough of handling text data in Pandas

--- a/Working_with_text_data/03.10-Working-With-Strings.ipynb
+++ b/Working_with_text_data/03.10-Working-With-Strings.ipynb
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -906,7 +906,7 @@
        "(2, 12)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
     "from io import StringIO, BytesIO \n",
     "import gzip\n",
     "\n",
-    "with gzip.open('./data/20170107-061401-recipeitems.json.gz', 'rb') as f:\n",
+    "with gzip.open('C:/Users/tpooz/OneDrive/Desktop/Data_Science_BootCamp_2023/SpringBoard_Github/Springboard/Working_with_text_data/20170107-061401-recipeitems.json.gz', 'rb') as f:\n",
     "    line = f.readline()\n",
     "pd.read_json(BytesIO(line)).shape"
    ]
@@ -932,12 +932,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read the entire file into a Python array\n",
-    "with gzip.open('./data/20170107-061401-recipeitems.json.gz', 'rb') as f:\n",
+    "with gzip.open('C:/Users/tpooz/OneDrive/Desktop/Data_Science_BootCamp_2023/SpringBoard_Github/Springboard/Working_with_text_data/20170107-061401-recipeitems.json.gz', 'rb') as f:\n",
     "    # Extract each line\n",
     "    data = (BytesIO(line).getvalue().decode().strip() for line in f)\n",
     "    # Reformat so each line is the element of a list\n",
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -961,7 +961,7 @@
        "(173278, 17)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1010,7 +1010,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1051,7 +1051,7 @@
        "Name: ingredients, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1084,7 +1084,7 @@
        "'Carrot Pineapple Spice &amp; Brownie Layer Cake with Whipped Cream &amp; Cream Cheese Frosting and Marzipan Carrots'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1117,7 +1117,7 @@
        "3524"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1148,7 +1148,7 @@
        "10526"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1179,7 +1179,7 @@
        "11"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1353,7 +1353,7 @@
        "4  False  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1388,7 +1388,7 @@
        "10"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1430,7 +1430,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
