--- a/linear_regression/Mini_Project_Linear_Regression.ipynb
+++ b/linear_regression/Mini_Project_Linear_Regression.ipynb
@@ -28,10 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# special IPython command to prepare the notebook for matplotlib and other libraries\n",
@@ -208,27 +206,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_boston\n",
     "import pandas as pd\n",
     "\n",
-    "boston = load_boston()"
+    "data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
+    "raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
+    "data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
+    "target = raw_df.values[1::2, 2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], dtype='int64')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "boston.keys()"
+    "raw_df.keys()"
    ]
   },
   {
@@ -546,10 +553,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import regression modules\n",
@@ -1136,7 +1141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1150,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
