Added comments regarding packages imported to notebook

--- a/Linear_Regression_Case_Study/Springboard_Regression_Case_Study_-_the_Red_Wine_Dataset_-_Tier_3.ipynb
+++ b/Linear_Regression_Case_Study/Springboard_Regression_Case_Study_-_the_Red_Wine_Dataset_-_Tier_3.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -88,11 +88,11 @@
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns # For all our visualization needs.\n",
-    "import statsmodels.api as sm # What does this do? Find out and type here.\n",
-    "from statsmodels.graphics.api import abline_plot # What does this do? Find out and type here.\n",
-    "from sklearn.metrics import mean_squared_error, r2_score # What does this do? Find out and type here.\n",
-    "from sklearn.model_selection import train_test_split #  What does this do? Find out and type here.\n",
-    "from sklearn import linear_model, preprocessing # What does this do? Find out and type here.\n",
+    "import statsmodels.api as sm # What does this do? Find out and type here. Python package used for estimating and interpreting various statistical models (from ChatGPT). \n",
+    "from statsmodels.graphics.api import abline_plot # What does this do? Find out and type here. Plotting import from Statsmodel graphics package (though seems to not be in current documentation)\n",
+    "from sklearn.metrics import mean_squared_error, r2_score # What does this do? Find out and type here. Metrics module implements functions assessing prediction error for specific purposes in this case the mean squared error and r2 scored value. (from documentation)\n",
+    "from sklearn.model_selection import train_test_split #  What does this do? Find out and type here. Split arrays or matrices into random train and test subsets. (from documentation)\n",
+    "from sklearn import linear_model, preprocessing # What does this do? Find out and type here. Linear_model implements a variety of linear models such as Linear Regression which fits the data with sum of least square residual from predicted and actual values. Preprocessing provides methods to standadrize data in an array such as StandardScaler() method.\n",
     "import warnings # For handling error messages.\n",
     "# Don't worry about the following two instructions: they just suppress warnings that could occur later. \n",
     "warnings.simplefilter(action=\"ignore\", category=FutureWarning)\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
