Looked over Tier 2 to work on Tier 3

--- a/Linear_Regression_Case_Study/Springboard_Regression_Case_Study_-_the_Red_Wine_Dataset_-_Tier_2.ipynb
+++ b/Linear_Regression_Case_Study/Springboard_Regression_Case_Study_-_the_Red_Wine_Dataset_-_Tier_2.ipynb
@@ -63,15 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import relevant libraries and packages.\n",
-    "import _ _ _ as np \n",
-    "import _ _ _ as pd \n",
-    "import _ _ _.pyplot as plt \n",
-    "import _ _ _ as sns # For all our visualization needs.\n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns # For all our visualization needs.\n",
     "import statsmodels.api as sm # What does this do? Find out and type here.\n",
     "from statsmodels.graphics.api import abline_plot # What does this do? Find out and type here.\n",
     "from sklearn.metrics import mean_squared_error, r2_score # What does this do? Find out and type here.\n",
@@ -92,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data. We'll set the parameter index_col to 0, because the first column contains no useful data. \n",
-    "wine = pd._ _ _(\"wineQualityReds.csv\", index_col=0)"
+    "wine = pd.read_csv(\"C:/Users/tpooz/OneDrive/Desktop/Data_Science_BootCamp_2023/SpringBoard_Github/Springboard/Linear_Regression_Case_Study/wineQualityReds.csv\", index_col = 0)"
    ]
   },
   {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,8 +416,8 @@
     "# Create a variable called 'X' and assign it the density field of wine.\n",
     "# Create a variable called 'y' (that's right, lower case) and assign it the fixed.acidity field of wine. \n",
     "# Using double brackets allows us to use the column headings. \n",
-    "X = wine[[\"_ _ _\"]] \n",
-    "_ _ _ = wine[[\"_ _ _\"]]\n",
+    "X = wine[[\"density\"]] \n",
+    "y = wine[[\"fixed.acidity\"]]\n",
     "\n",
     "# Split the data. This line uses the sklearn function train_test_split().\n",
     "# The test_size parameter means we can train with 75% of the data, and test on 25%. \n",
@@ -427,13 +427,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1199, 1) (1199, 1)\n",
+      "(400, 1) (400, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# We now want to check the shape of the X train, y_train, X_test and y_test to make sure the proportions are right. \n",
-    "print(X_train.shape, y_train._ _ _)\n",
-    "print(X_test._ _ _, y_test.shape)"
+    "print(X_train.shape, y_train.shape)\n",
+    "print(X_test.shape, y_test.shape)"
    ]
   },
   {
@@ -846,7 +855,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -860,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
