Imported packages for EDA of Fast Food Marketing Dataset

--- a/Data_Storytelling_Case_Study/Data_Storytelling_Fase_Food_Marketing.ipynb
+++ b/Data_Storytelling_Case_Study/Data_Storytelling_Fase_Food_Marketing.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Bank_Churnrate_Data_Wrangling<a id='2_Data_wrangling'></a>"
+    "# Data_Storytelling_Case_Study: Fast Food Marketing<a id='2_Data_wrangling'></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Table of Contents<a id='2.1_Contents'></a>\n",
+    "## Table of Contents<a id='2.1_Contents'></a>\n",
     "* 2. Bank_Churnrate_Data_Wrangling\n",
     "  * 2.1 Table of Contents\n",
     "  * 2.2 Introduction\n",
@@ -35,14 +35,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Introduction"
+    "## Introduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the Data Wrangling/Cleaning phase, the dataset provided by the kaggle user needs to assessed for any null values as well as verify if data in columns have appropriate data types and records."
+    "Fast Food Company dataset retreived from: https://www.kaggle.com/datasets/chebotinaa/fast-food-marketing-campaign-ab-test/\n",
+    "details different columns as mentioned in the summary within the link of MarketID, MarketSize (size of the market given sales), LocationID, AgeofStore in years, Promotion (details which promotion was lauched for the store), week (which week of the 4 weeks of a month the promotion was tested on), and SalesinThousands (amount of sales given LocationID, Promotion, and week). \n",
+    "\n",
+    "The goal of this notebook is to glean any important insights or trends given the dataset to understand the customer user base and potential future work would be to given the features predict with Regression Analysis the SalesinThounsands for a store to assist with future company decision making."
    ]
   },
   {
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +91,7 @@
    "outputs": [],
    "source": [
     "# the supplied CSV data file is the raw_data directory\n",
-    "bank_df = pd.read_csv('C:/Users/tpooz/OneDrive/Desktop/Data_Science_BootCamp_2023/SpringBoard_Github/Bank-Churnrate/0_Datasets/supply_chain_train.csv')"
+    "food_df = pd.read_csv('C:/Users/tpooz/OneDrive/Desktop/Data_Science_BootCamp_2023/SpringBoard_Github/Bank-Churnrate/0_Datasets/supply_chain_train.csv')"
    ]
   },
   {
