Added modified dataset for Fast Food Marketing and comments regarding summary of correlation for SalesInThousands Target with other features.

--- a/Data_Storytelling_Case_Study/Data_Storytelling_Fast_Food_Marketing.ipynb
+++ b/Data_Storytelling_Case_Study/Data_Storytelling_Fast_Food_Marketing.ipynb
@@ -1159,22 +1159,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food_df_dummy_dropped = food_df_dummy.drop(['MarketSize_Medium'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8101, 22)"
+       "(548, 8)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bank_df.shape"
+    "food_df_dummy_dropped.shape"
    ]
   },
   {
@@ -1184,8 +1193,8 @@
    "outputs": [],
    "source": [
     "# save the data to a new csv file\n",
-    "datapath = 'C:/Users/tpooz/OneDrive/Desktop/Data_Science_BootCamp_2023/SpringBoard_Github/Bank-Churnrate/0_Datasets'\n",
-    "bank_df.to_csv('C:/Users/tpooz/OneDrive/Desktop/Data_Science_BootCamp_2023/SpringBoard_Github/Bank-Churnrate/0_Datasets/bank_data_train_clean.csv')  "
+    "datapath = 'C:/Users/tpooz/OneDrive/Desktop/Data_Science_BootCamp_2023/SpringBoard_Github/Springboard/Data_Storytelling_Case_Study/Dataset/food_df_dummy.csv'\n",
+    "food_df_dummy_dropped.to_csv(datapath)  "
    ]
   },
   {
